# document-similarity-analyzer

./: .clippy.toml  .gitignore  API_DOCUMENTATION.md  Cargo.toml  README.md  REPORT.md
benches/: benchmark.rs
docs/: ALGORITHM_FLOW.md  DEVELOPER_GUIDE.html  REPORT.html  REPORT.md  SOURCE_CODE.html  prd_document_similarity.md
example-request/: test_doc1.txt  test_doc2.txt  test_doc3.txt
src/: lib.rs  main.rs
src/api/: error.rs  file_upload.rs  handlers.rs  mod.rs  server.rs
src/core/: idf.rs  matrix.rs  mod.rs  normalize.rs  pipeline.rs  sentence_pipeline.rs  similarity.rs  tf.rs  tokenize.rs  vectorize.rs
src/extraction/: docx.rs  mod.rs  pdf.rs  txt.rs
src/models/: document.rs  mod.rs  request.rs  response.rs  sentence_analysis.rs
src/sentence/: mod.rs
tests/: api_integration_test.rs  integration.rs  manual_workflow_test.rs
