[package]
name = "document-similarity-analyzer"
version = "0.1.0"
edition = "2021"
authors = ["iqmal"]
description = "Backend service for analyzing document similarity using TF-IDF and Cosine Similarity with parallel processing"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }

# File Extraction
pdf-extract = "0.7"
docx-rs = "0.4"

# Parallel Processing
rayon = "1.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error Handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Regex for sentence splitting
regex = "1"
lazy_static = "1.4"

[dev-dependencies]
criterion = "0.5"
reqwest = { version = "0.11", features = ["json"] }
tokio-test = "0.4"

[[bench]]
name = "benchmark"
harness = false
